--- a/Move-Constructor-Test/Makefile
+++ b/Move-Constructor-Test/Makefile
@@ -1,3 +1,6 @@
+CXX=g++
+CXXFLAGS=--std=c++14
+
 DEFAULT:
 	echo "Use make all to compile, or make clean to remove all compiled files."
 
@@ -7,11 +10,11 @@ object:
 bin:
 	mkdir bin
 
-object/main.o: object
-	g++ -c --std=c++14 main.cpp -o object/main.o
+object/main.o: object main.cpp
+	$(CXX) $(CXXFLAGS) -c main.cpp -o object/main.o
 
-object/TestClass.o: object
-	g++ -c --std=c++14 TestClass.cpp -o object/TestClass.o
+object/TestClass.o: object TestClass.cpp
+	$(CXX) $(CXXFLAGS) -c TestClass.cpp -o object/TestClass.o
 
 all: object/main.o object/TestClass.o bin
 	g++ object/main.o object/TestClass.o -o bin/main
