--- a/win32/window_test/Makefile
+++ b/win32/window_test/Makefile
@@ -4,7 +4,7 @@ CC=gcc
 all: window_test.exe
 
 window_test.exe: window_test.o resources.o
-	$(CC) -o window_test.exe window_test.o resources.o
+	$(CC) -mwindows -o window_test.exe window_test.o resources.o
 
 resources.o: resources.rc
 	windres resources.rc resources.o
