--- a/win32/window_test/Makefile
+++ b/win32/window_test/Makefile
@@ -7,7 +7,7 @@ window_test.exe: window_test.o resources.o
 	$(CC) -mwindows -o window_test.exe window_test.o resources.o
 
 resources.o: resources.rc
-	windres resources.rc resources.o
+	windres resources.rc -O coff -o resources.o
 
 clean:
 	rm -f *.o *.exe
