--- a/win32/window_test/resources.rc
+++ b/win32/window_test/resources.rc
@@ -1,5 +1,32 @@
 #include "resource.h"
 
+1 VERSIONINFO
+FILEVERSION     0,0,0,1
+PRODUCTVERSION  0,0,0,1
+BEGIN
+  BLOCK "StringFileInfo"
+  BEGIN
+    BLOCK "040904E4"
+    BEGIN
+      VALUE "CompanyName", "SketchyCo"
+      VALUE "FileDescription", "An application for Windows."
+      VALUE "FileVersion", "0.001"
+      VALUE "InternalName", "window_test"
+      VALUE "LegalCopyright", "Jason Li"
+      VALUE "OriginalFilename", "window_test.exe"
+      VALUE "ProductName", "TrashApp"
+      VALUE "ProductVersion", "0.001"
+    END
+  END
+
+  BLOCK "VarFileInfo"
+  BEGIN
+    VALUE "Translation", 0x409, 1252
+  END
+END
+
+IDI_MYEXEICON ICON "exeicons.ico"
+
 IDI_MYICON ICON "icons.ico"
 
 IDR_MYMENU MENU
