--- a/win32/window_test/Makefile
+++ b/win32/window_test/Makefile
@@ -6,7 +6,7 @@ all: window_test.exe
 window_test.exe: window_test.o resources.o
 	$(CC) -mwindows -o window_test.exe window_test.o resources.o
 
-resources.o: resources.rc
+resources.o: resources.rc Application.manifest exeicons.ico icons.ico
 	windres resources.rc -O coff -o resources.o
 
 clean:
