--- a/win32/window_test/resources.rc
+++ b/win32/window_test/resources.rc
@@ -1,6 +1,8 @@
 #include <windows.h>
 #include "resource.h"
 
+1 RT_MANIFEST "Application.manifest"
+
 1 VERSIONINFO
 FILEVERSION     0,0,0,1
 PRODUCTVERSION  0,0,0,1
