added saving functionality to notepad

--- a/win32/simple_notepad/resources.rc
+++ b/win32/simple_notepad/resources.rc
@@ -38,8 +38,13 @@ BEGIN
 	BEGIN
 		MENUITEM "&Open", ID_FILE_OPEN
 		MENUITEM "&Save", ID_FILE_SAVE
-		MENUITEM "&About", ID_FILE_ABOUT
+		MENUITEM "Save &As", ID_FILE_SAVE_AS
 		MENUITEM "E&xit", ID_FILE_EXIT
+	END
+	
+	POPUP "&Help"
+	BEGIN
+		MENUITEM "&About", ID_HELP_ABOUT
 	END
 END
 
