added keyboard shortcuts

--- a/win32/simple_notepad/resources.rc
+++ b/win32/simple_notepad/resources.rc
@@ -58,3 +58,11 @@ BEGIN
     GROUPBOX "Memes in this box...", IDC_STATIC, 7, 7, 275, 52
     CTEXT "Here are\r\nsome\r\nmemes.", IDC_STATIC, 16, 18, 144, 33
 END
+
+KB_ACCELERATORS ACCELERATORS
+BEGIN
+	"O", ID_FILE_OPEN, CONTROL, VIRTKEY
+	"S", ID_FILE_SAVE, CONTROL, VIRTKEY
+	"S", ID_FILE_SAVE_AS, CONTROL, SHIFT, VIRTKEY
+	"W", ID_FILE_EXIT, CONTROL, VIRTKEY
+END
