added undo functionality

--- a/win32/simple_notepad/resources.rc
+++ b/win32/simple_notepad/resources.rc
@@ -42,6 +42,11 @@ BEGIN
 		MENUITEM "E&xit", ID_FILE_EXIT
 	END
 	
+	POPUP "&Edit"
+	BEGIN
+		MENUITEM "&Undo", ID_EDIT_UNDO
+	END
+	
 	POPUP "&Help"
 	BEGIN
 		MENUITEM "&About", ID_HELP_ABOUT
@@ -65,4 +70,5 @@ BEGIN
 	"S", ID_FILE_SAVE, CONTROL, VIRTKEY
 	"S", ID_FILE_SAVE_AS, CONTROL, SHIFT, VIRTKEY
 	"W", ID_FILE_EXIT, CONTROL, VIRTKEY
+	"Z", ID_EDIT_UNDO, CONTROL, VIRTKEY
 END
