added new file functionality, added changing title text functionality

--- a/win32/notepad_with_toolbars/resources.rc
+++ b/win32/notepad_with_toolbars/resources.rc
@@ -36,15 +36,16 @@ IDR_MYMENU MENU
 BEGIN
 	POPUP "&File"
 	BEGIN
-		MENUITEM "&Open", ID_FILE_OPEN
-		MENUITEM "&Save", ID_FILE_SAVE
-		MENUITEM "Save &As", ID_FILE_SAVE_AS
-		MENUITEM "E&xit", ID_FILE_EXIT
+		MENUITEM "&New\tCtrl+N", ID_FILE_NEW
+		MENUITEM "&Open...\tCtrl+O", ID_FILE_OPEN
+		MENUITEM "&Save\tCtrl+S", ID_FILE_SAVE
+		MENUITEM "Save &As...\tCtrl+Shift+S", ID_FILE_SAVE_AS
+		MENUITEM "E&xit\tCtrl+W", ID_FILE_EXIT
 	END
 	
 	POPUP "&Edit"
 	BEGIN
-		MENUITEM "&Undo", ID_EDIT_UNDO
+		MENUITEM "&Undo\tCtrl+Z", ID_EDIT_UNDO
 	END
 	
 	POPUP "&Help"
@@ -66,6 +67,7 @@ END
 
 KB_ACCELERATORS ACCELERATORS
 BEGIN
+	"N", ID_FILE_NEW, CONTROL, VIRTKEY
 	"O", ID_FILE_OPEN, CONTROL, VIRTKEY
 	"S", ID_FILE_SAVE, CONTROL, VIRTKEY
 	"S", ID_FILE_SAVE_AS, CONTROL, SHIFT, VIRTKEY
