fixed makefile to work with c++

--- a/win32/notepad_with_toolbars/Makefile
+++ b/win32/notepad_with_toolbars/Makefile
@@ -2,6 +2,7 @@ CC=gcc
 CXX=g++
 LINKS=-lcomctl32
 OBJS=resources.o notepad_with_toolbars.o
+FLAGS+=-g
 CFLAGS+=-std=c11
 CXXFLAGS+=-std=c++14
 
@@ -9,26 +10,26 @@ CXXFLAGS+=-std=c++14
 all: notepad_with_toolbars.exe
 
 notepad_with_toolbars.exe: $(OBJS)
-	$(CC) $(CFLAGS) -mwindows -o notepad_with_toolbars.exe $(OBJS) $(LINKS)
+	$(CXX) $(FLAGS) $(CXXFLAGS) -mwindows -o notepad_with_toolbars.exe $(OBJS) $(LINKS)
 
 resources.o: resources.rc Application.manifest exeicons.ico icons.ico resource.h
 	windres resources.rc -O coff -o resources.o
 
 clean:
-	rm -f *.o *.exe
+	rm -f *.o *.exe *.d
 
 #Scott McPeak's code
 %.o: %.c
-	$(CC) -c $(CFLAGS) $*.c -o $*.o
-	$(CC) -MM $(CFLAGS) $*.c > $*.d
+	$(CC) -c $(FLAGS) $(CFLAGS) $*.c -o $*.o
+	$(CC) -MM $(FLAGS) $(CFLAGS) $*.c > $*.d
 	@mv -f $*.d $*.d.tmp
 	@sed -e 's|.*:|$*.o:|' < $*.d.tmp > $*.d
 	@sed -e 's/.*://' -e 's/\\$$//' < $*.d.tmp | fmt -1 | sed -e 's/^ *//' -e 's/$$/:/' >> $*.d
 	@rm -f $*.d.tmp
 
 %.o: %.cpp
-	$(CXX) -c $(CXXFLAGS) $*.cpp -o $*.o
-	$(CXX) -MM $(CXXFLAGS) $*.cpp > $*.d
+	$(CXX) -c $(FLAGS) $(CXXFLAGS) $*.cpp -o $*.o
+	$(CXX) -MM $(FLAGS) $(CXXFLAGS) $*.cpp > $*.d
 	@mv -f $*.d $*.d.tmp
 	@sed -e 's|.*:|$*.o:|' < $*.d.tmp > $*.d
 	@sed -e 's/.*://' -e 's/\\$$//' < $*.d.tmp | fmt -1 | sed -e 's/^ *//' -e 's/$$/:/' >> $*.d
