now with progress bar technology(R)

--- a/win32/picture_preprocessor/resources.rc
+++ b/win32/picture_preprocessor/resources.rc
@@ -32,10 +32,19 @@ IDI_MYEXEICON ICON "exeicons.ico"
 
 IDI_MYICON ICON "icons.ico"
 
-IDD_SELECTDIRECTORY DIALOG 0, 0, 600, 400
-STYLE WS_CAPTION | WS_POPUPWINDOW | WS_MAXIMIZEBOX | WS_VISIBLE
+IDD_SELECTDIRECTORY DIALOG 0, 0, 200, 300
+STYLE WS_CAPTION | WS_POPUPWINDOW | WS_MINIMIZEBOX | WS_VISIBLE
 CAPTION "Select Directory"
 FONT 8, "MS Sans Serif"
 BEGIN
-	PUSHBUTTON "Choose Input Directory", IDC_SELECTINPUTDIRECTORY, 200, 200, 200, 20
+	PUSHBUTTON "Choose Input Directory", IDC_SELECTINPUTDIRECTORY, 20, 60, 100, 20
+	DEFPUSHBUTTON "Begin Processing", IDOK, 20, 240, 60, 20
+END
+
+IDD_PROCESSPROGRESS DIALOG 0, 0, 400, 100
+STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Processing..."
+FONT 8, "MS Sans Serif"
+BEGIN
+	PUSHBUTTON "Cancel", IDCANCEL, 320, 20, 50, 20
 END
