--- a/win32/picture_preprocessor/resources.rc
+++ b/win32/picture_preprocessor/resources.rc
@@ -37,8 +37,11 @@ STYLE WS_CAPTION | WS_POPUPWINDOW | WS_MINIMIZEBOX | WS_VISIBLE
 CAPTION "Select Directory"
 FONT 8, "MS Sans Serif"
 BEGIN
-	PUSHBUTTON "Choose Input Directory", IDC_SELECTINPUTDIRECTORY, 20, 60, 100, 20
-	DEFPUSHBUTTON "Begin Processing", IDOK, 20, 240, 60, 20
+	EDITTEXT IDC_INPUTDIRECTORY, 10, 10, 180, 14
+	PUSHBUTTON "Choose Input Directory", IDC_SELECTINPUTDIRECTORY, 10, 26, 100, 14
+	EDITTEXT IDC_OUTPUTDIRECTORY, 10, 42, 180, 14
+	PUSHBUTTON "Choose Output Directory", IDC_SELECTOUTPUTDIRECTORY, 10, 58, 100, 14
+	DEFPUSHBUTTON "Begin Processing", IDOK, 10, 240, 60, 14
 END
 
 IDD_PROCESSPROGRESS DIALOG 0, 0, 400, 100
@@ -46,5 +49,5 @@ STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Processing..."
 FONT 8, "MS Sans Serif"
 BEGIN
-	PUSHBUTTON "Cancel", IDCANCEL, 320, 20, 50, 20
+	PUSHBUTTON "Cancel", IDCANCEL, 340, 10, 50, 14
 END
