made makefile do things individually since auto dependency generation appears not to work

--- a/raspi/wxWidgets/button_test/Makefile
+++ b/raspi/wxWidgets/button_test/Makefile
@@ -5,8 +5,8 @@ OBJS=main.o
 FLAGS+=
 CFLAGS+=-std=c11
 CXXFLAGS+=-std=c++14
-WXCXXFLAGS:=$(shell wx-config --cxxflags --cppflags --libs)
-CXXFLAGS+= $(shell wx-config --cxxflags --cppflags)
+WXCXXLFLAGS:=$(shell wx-config --cxxflags --cppflags --libs)
+WXCXXFLAGS:= $(shell wx-config --cxxflags --cppflags)
 
 .PHONY: all clean
 all: button_test
@@ -20,19 +20,22 @@ button_test: precompiled_headers.h.gch $(OBJS)
 clean:
 	rm -f *.o button_test *.d *.gch
 
-#Scott McPeak's code
-%.o: %.c
-	$(CC) -c $(FLAGS) $(CFLAGS) $*.c -o $*.o
-	$(CC) -MM $(FLAGS) $(CFLAGS) $*.c > $*.d
-	@mv -f $*.d $*.d.tmp
-	@sed -e 's|.*:|$*.o:|' < $*.d.tmp > $*.d
-	@sed -e 's/.*://' -e 's/\\$$//' < $*.d.tmp | fmt -1 | sed -e 's/^ *//' -e 's/$$/:/' >> $*.d
-	@rm -f $*.d.tmp
+main.o: precompiled_headers.h.gch main.cpp
+	$(CXX) -c $(FLAGS) $(CXXFLAGS) $(WXCXXFLAGS) main.cpp -o main.o
 
-%.o: %.cpp
-	$(CXX) -c $(FLAGS) $(CXXFLAGS) $*.cpp -o $*.o
-	$(CXX) -MM $(FLAGS) $(CXXFLAGS) $*.cpp > $*.d
-	@mv -f $*.d $*.d.tmp
-	@sed -e 's|.*:|$*.o:|' < $*.d.tmp > $*.d
-	@sed -e 's/.*://' -e 's/\\$$//' < $*.d.tmp | fmt -1 | sed -e 's/^ *//' -e 's/$$/:/' >> $*.d
-	@rm -f $*.d.tmp
+#Scott McPeak's code
+#%.o: %.c
+#	$(CC) -c $(FLAGS) $(CFLAGS) $*.c -o $*.o
+#	$(CC) -MM $(FLAGS) $(CFLAGS) $*.c > $*.d
+#	@mv -f $*.d $*.d.tmp
+#	@sed -e 's|.*:|$*.o:|' < $*.d.tmp > $*.d
+#	@sed -e 's/.*://' -e 's/\\$$//' < $*.d.tmp | fmt -1 | sed -e 's/^ *//' -e 's/$$/:/' >> $*.d
+#	@rm -f $*.d.tmp
+
+#%.o: %.cpp
+#	$(CXX) -c $(FLAGS) $(CXXFLAGS) $*.cpp -o $*.o
+#	$(CXX) -MM $(FLAGS) $(CXXFLAGS) $*.cpp > $*.d
+#	@mv -f $*.d $*.d.tmp
+#	@sed -e 's|.*:|$*.o:|' < $*.d.tmp > $*.d
+#	@sed -e 's/.*://' -e 's/\\$$//' < $*.d.tmp | fmt -1 | sed -e 's/^ *//' -e 's/$$/:/' >> $*.d
+#	@rm -f $*.d.tmp
