--- a/win32/LayoutManagerTest/LayoutManagerTest.vcxproj.filters
+++ b/win32/LayoutManagerTest/LayoutManagerTest.vcxproj.filters
@@ -26,12 +26,10 @@
     </Image>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="notepad_with_toolbars_old.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
     <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GBLayoutMgr.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -39,5 +37,13 @@
     <ResourceCompile Include="resources.rc">
       <Filter>Resource Files</Filter>
     </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="notepad_with_toolbars.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GBLayoutMgr.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
