--- a/raspi/fltk/embedded_images/Makefile
+++ b/raspi/fltk/embedded_images/Makefile
@@ -48,7 +48,7 @@ else
 	ifneq ($(filter arm%,$(UNAME_M)),)
 		#CCFLAGS += -D ARM
 		OBJCOPY_FORMAT:=$(OBJCOPY_FORMAT)32-little
-		BINARY_ARCH=arm
+		BINARY_ARCH=littlearm
 	endif
 endif
 
