--- a/win32/OpenClTest2/OpenClTest2/OpenClTest2.vcxproj.filters
+++ b/win32/OpenClTest2/OpenClTest2/OpenClTest2.vcxproj.filters
@@ -24,4 +24,7 @@
       <Filter>Source Files</Filter>
     </Intel_OpenCL_Build_Rules>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
 </Project>
