Made OpenCL blur its own self-contained class.
Will create a general Convolution class later. (with blur, edgedetect, etc. as matrices that can be used with it)

--- a/win32/OpenClTest2/OpenClTest2/OpenClTest2.vcxproj.filters
+++ b/win32/OpenClTest2/OpenClTest2/OpenClTest2.vcxproj.filters
@@ -15,16 +15,22 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Main.cpp">
+    <ClCompile Include="OCLBlur.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <Intel_OpenCL_Build_Rules Include="kernel.cl">
-      <Filter>Source Files</Filter>
-    </Intel_OpenCL_Build_Rules>
+    <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Intel_OpenCL_Build_Rules Include="kernel.cl">
+      <Filter>OpenCL Files</Filter>
+    </Intel_OpenCL_Build_Rules>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="OCLBlur.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
