--- a/win32/OpenClTest2/OpenClTest2/OpenClTest2.vcxproj
+++ b/win32/OpenClTest2/OpenClTest2/OpenClTest2.vcxproj
@@ -179,8 +179,10 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BlurKernel.cpp" />
+    <ClCompile Include="ConvolutionKernel.cpp" />
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="OCLBlur.cpp" />
+    <ClCompile Include="OCLConvolve.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Intel_OpenCL_Build_Rules Include="kernel.cl" />
@@ -189,7 +191,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="OCLBlur.h" />
+    <ClInclude Include="BlurKernel.h" />
+    <ClInclude Include="ConvolutionKernel.h" />
+    <ClInclude Include="OCLConvolve.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
