--- a/raspi/OpenGLES/hello_triangle2_cube/Makefile.include
+++ b/raspi/OpenGLES/hello_triangle2_cube/Makefile.include
@@ -13,10 +13,10 @@ all: $(BIN) $(LIB)
 %.o: %.cpp
 	$(CXX) $(CFLAGS) $(INCLUDES) -g -c $< -o $@ -Wno-deprecated-declarations
 
-%.bin: $(OBJS)
+$(BIN): $(OBJS)
 	$(CC) -o $@ -Wl,--whole-archive $(OBJS) $(LDFLAGS) -Wl,--no-whole-archive -rdynamic
 
-%.a: $(OBJS)
+$(LIB): $(OBJS)
 	$(AR) r $@ $^
 
 clean:
