--- a/raspi/OpenGLES/hello_triangle2_cube/Makefile
+++ b/raspi/OpenGLES/hello_triangle2_cube/Makefile
@@ -1,4 +1,4 @@
-OBJS=main.o ogl_utils.o buffers.o shaders.o
+OBJS=main.o ogl_utils.o buffers.o shaders.o update_cube.o
 BIN=hello_triangle2.bin
 
 include Makefile.include
