--- a/raspi/OpenGLES/obj_render/Makefile
+++ b/raspi/OpenGLES/obj_render/Makefile
@@ -1,4 +1,4 @@
-OBJS=main.o ogl_utils.o buffers.o shaders.o update_cube.o texture.o
+OBJS=main.o ogl_utils.o shaders.o update_cube.o texture.o loadobj.o
 BIN=hello_triangle2.bin
 
 include Makefile.include
