Entities can now rotate automatically

--- a/raspi/OpenGLES/game_1/Makefile
+++ b/raspi/OpenGLES/game_1/Makefile
@@ -1,5 +1,5 @@
 OBJS=main.o ogl_utils.o shaders.o update_cube.o texture.o loadobj.o Entity.o OGLEntity.o
-BIN=hello_triangle2.bin
+BIN=game_test
 
 include Makefile.include
 
